# Pocket-Swasth-Ai

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/constants/: app_constants.dart
lib/core/theme/: app_theme.dart
lib/core/utils/: helpers.dart
lib/models/: appointment.dart  chat_message.dart  diagnosis.dart  medical_knowledge_update.dart  prescription.dart  user_profile.dart
lib/providers/: chat_provider.dart  health_provider.dart  mode_provider.dart  user_provider.dart
lib/routes/: app_routes.dart
lib/screens/: chat_screen.dart  doctor_console_screen.dart  doctor_twin_screen.dart  doctors_screen.dart  main_shell_screen.dart  profile_screen.dart  report_screen.dart  sos_screen.dart  verify_screen.dart
lib/services/ai/: ai_router.dart  offline_llm_service.dart  openrouter_service.dart
lib/services/medical/: diagnosis_engine.dart  health_risk_engine.dart  medical_knowledge_sync_service.dart  prescription_ocr_service.dart  prescription_validator.dart
lib/services/storage/: local_db_service.dart
lib/widgets/cards/: medical_card.dart
lib/widgets/chat/: chat_bubble.dart  (+1 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+5 files in other folders)
